
Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.106

- Fixed installation of msg/debug.h header file.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.105

- Fixed envstr_unset to remove all instances of the given name.

- Added sysdep for d_ino and d_type in struct dirent.

- Fixed the path_match function to match filenames containing pattern
  characters (ie [filename] etc) the same way shells do.

- Files generated by cli-generate now indicate the source .cli file.

- Fixed the debug messages to not enable any by default.

- Modified the build procedure to build all sources with libtool.
  This should fix problems with parallel make.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.104

- Fixed several typos in the installation files.

- Renamed some files that differed only in upper/lower case.  This
  should fix building on OSX.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.103

- Added two missing header files: fmt/misc.h and fmt/multi.h

- Added a ghash_set function (like ghash_add, but overwrites).

- Added a set of "signalfd" functions as a generic self-pipe setup.

- Added a random number generator based on SURF.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/